Bug fix: Fix odd gapping/spacing on browser collapse of color chart

--- a/main.css
+++ b/main.css
@@ -138,6 +138,13 @@ a:hover {
 
 .swatch:hover p, .swatch:hover h3 {
     display: block;
+    margin: 0px;
+
+}
+
+.swatch:hover h3 {
+    padding-top: 20px;
+
 }
 
 .swatch.rubywoo {
